--- a/inittest.html
+++ b/inittest.html
@@ -1,4 +1,4 @@
-<textarea width="600" height="400"></textarea>
+<textarea></textarea>
 <button onclick="addEl()">click</button>
 <script>
 function addEl(){
