--- a/inittest.html
+++ b/inittest.html
@@ -1,4 +1,4 @@
-<textarea style="width=600px;height=400px"></textarea>
+<textarea style="width:600px;height:400px"></textarea>
 <button onclick="addEl()">click</button>
 <script>
 function addEl(){
