--- a/inittest.html
+++ b/inittest.html
@@ -3,6 +3,8 @@
 <script>
 function addEl(){
 	var el = document.createElement("textarea");
+	el.style.width = "600px";
+	el.style.height = "400px";
 	var body = document.getElementsByTagName("body")[0];
 	body.appendChild(el);
 }
