--- a/inittest.html
+++ b/inittest.html
@@ -1,5 +1,5 @@
-<textarea style="width:600px;height:400px"></textarea>
-<button onclick="addEl()">click</button>
+<textarea style="width:600px;height:400px;display:block"></textarea>
+<button style="display:block" onclick="addEl()">click</button>
 <script>
 function addEl(){
 	var el = document.createElement("textarea");
