--- a/like-en.html
+++ b/like-en.html
@@ -1,4 +1,3 @@
-<iframe src="" style="height:600px;width=600px">
-  <div style="height:600px;width=600px" contenteditable="true"></div>
-
+<iframe src="javascript:""" style="height:600px;width:600px">
+  <div style="height:600px;width:600px" contenteditable="true"></div>
 </iframe>
