--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<div style="color:grey;widht:500px;height:500px" contenteditable=true></div>
+<div style="widht:500px;height:500px" contenteditable=true></div>
