--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<div style="widht:500px;height:500px" contenteditable=true></div>
+<div style="widht:500px;height:500px;background-color: yellow;" spellcheck="true"></div>
