--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<div style="widht:200px;height:200px;background-color: yellow;" spellcheck="true"></div>
+<div style="width:200px;height:200px;background-color: yellow;" spellcheck="true"></div>
