--- a/index.html
+++ b/index.html
@@ -1,4 +1,1 @@
-<textarea width="600" height="400"></textarea>
-<script>
-	
-</script>
+<div contenteditable="true">Som<code>e</code> sentence.</div>
