--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div style="height:150px" contenteditable="true">Som<span><code>e</code></span> sentence.</div>
+<div style="height:150px" contenteditable="true">Some sentence in here<span><code>.</code></span></div>
