--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div style="height:150px" contenteditable="true">"Some sentence in here"<span><code>qwea-sd-zxc</code>"."</span></div>
+<div style="height:150px" contenteditable="true">Some sentence in here<span><code>qwea-sd-zxc</code>.</span></div>
