--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<div style="height:150px" contenteditable="true">Some sentence in here&nbsp;<code>qwea-sd-zxc</code>.</div>
+<div style="height:150px" contenteditable="true">Some sentence in here&nbsp;<span>qwea-sd-zxc</span>.</div>
