--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<div style="height:150px" contenteditable="true">Some sentence in here&nbsp;<span>qwea-sd-zxc</span>.</div>
+<textarea id="textarea"></textarea>
+
+<script>
+var textarea = document.getElementById("textarea");
+var heightLimit = 200; /* Maximum height: 200px */
+
+textarea.oninput = function() {
+  textarea.style.height = ""; /* Reset the height*/
+  textarea.style.height = Math.min(textarea.scrollHeight, heightLimit) + "px";
+};
+</script>
