--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<textarea id="textarea"></textarea>
+<textarea style="widht:600px" id="textarea"></textarea>
 
 <script>
 var textarea = document.getElementById("textarea");
-var heightLimit = 200; /* Maximum height: 200px */
+var heightLimit = 500; /* Maximum height: 200px */
 
 textarea.oninput = function() {
   textarea.style.height = ""; /* Reset the height*/
