--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<textarea style="widht:600px" id="textarea"></textarea>
+<textarea style="width:600px" id="textarea"></textarea>
 
 <script>
 var textarea = document.getElementById("textarea");
