--- a/lever.html
+++ b/lever.html
@@ -1,6 +1,8 @@
 <style>
   .lever{
-    backgroud:rgba(0,0,255,0.3);
+    width:400px;
+    height:300px;
+    background:rgba(0,0,255,0.3);
   }
 </style>
 
