--- a/forms.html
+++ b/forms.html
@@ -1,2 +1,2 @@
 <textarea style="height:300px;width:600px"></textarea>
-<div style="height:300px;width:600px;border:1px" contenteditable="true"></div>
+<div style="height:300px;width:600px;border:1px solid black" contenteditable="true"></div>
