--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <p>qweasdzxc</p>
 <iframe src="http://www.ukr.net"></iframe>
 <p>jhjkhjk</p>
-<iframe srcdoc="<h1>qweasdzxc</h1>"></iframe>
+<iframe style='width:600px;height:400px' srcdoc="<textarea style='width:500px;height:300px'></textarea>"></iframe>
