--- a/index.html
+++ b/index.html
@@ -2,3 +2,4 @@
 <iframe src="http://www.ukr.net"></iframe>
 <p>jhjkhjk</p>
 <iframe style='width:600px;height:400px' srcdoc="<textarea style='width:500px;height:300px'></textarea>"></iframe>
+<textarea style='width:500px;height:300px'></textarea>
