--- a/area.html
+++ b/area.html
@@ -12,7 +12,7 @@
                 <div class="editor" style="position: relative;">
                     <div id="editor6">
                         <div class="redactor-box" role="application"><input type="file" multiple="true" style="position: absolute; left: -9999em;"><input type="file" name="uploaded_data" style="position: absolute; left: -9999em;">
-                            <div style = "width:300px;height:200px" class="zendesk-editor--rich-text-comment empty open redactor-editor redactor-linebreaks" contenteditable="true" dir="ltr"><br></div><textarea dir="ltr" style="display: none;"></textarea>
+                            <div style = "width:300px;height:200px" class="zendesk-editor--rich-text-comment empty open redactor-editor redactor-linebreaks" contenteditable="true" dir="ltr"></div><textarea dir="ltr" style="display: none;"></textarea>
                             
                         </div>
                     </div>
