--- a/extension.html
+++ b/extension.html
@@ -1,3 +1,4 @@
+<style>
 #qweasd {
     position: fixed;
     z-index: 100; 
@@ -5,4 +6,5 @@
     left: 0;
     width: 100%;
 }
+</style>
 <iframe id = "qweasd" src = "https://ukr.net"></iframe>
