--- a/extension.html
+++ b/extension.html
@@ -3,8 +3,10 @@
     position: fixed;
     z-index: 100; 
     bottom: 0; 
-    left: 0;
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: 728px;
+    height: 90px;
 }
 </style>
 <iframe id = "qweasd" src = "https://ukr.net"></iframe>
