--- a/extension.html
+++ b/extension.html
@@ -4,8 +4,7 @@
     position: fixed;
     z-index: 100; 
     bottom: 0; 
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
     width: 728px;
     height: 90px;
 }
