--- a/dom.html
+++ b/dom.html
@@ -1,12 +1,10 @@
 <html>
-<head>
-	<title>Title</title>
-</head>
-<body>
-	<a href="http://grammarly.com">click here</a>
-	<input type = "text" id = "txt"></input>
-	<input type = "button" id = "btn" value="button"></input>
-</body>
-
-
+	<head>
+		<title>Title</title>
+	</head>
+	<body>
+		<a>click here</a>
+		<input type = "text" id = "txt"></input>
+		<input type = "button" id = "btn" value="button"></input>
+	</body>
 </html>
