--- a/test.html
+++ b/test.html
@@ -1,4 +1,4 @@
-<div style="width:600px;height:200px;background-color:#D0D7D9;" contenteditable="true">Some text</div>
+<div id="in_ifr" style="width:600px;height:200px;background-color:#D0D7D9;" contenteditable="true">Some text</div>
 <br/>
 <div style="width:600px;height:200px;background-color:#D0D7D9;">Some text</div>
 <br/>
