--- a/iframe.html
+++ b/iframe.html
@@ -1,1 +1,11 @@
-<iframe src="http://vit1546.github.io/test.html" style="width:600px;height:200px;"></iframe>
+<iframe id="ifr" src="http://girhub.io/test.html" style="width:600px;height:200px;"></iframe>
+<p id="p_el"></p>
+<script type="text/javascript">
+	var iframe = document.getElementById("ifr");
+	
+
+	iframe.contentWindow.document.body.style.color = "blue";
+
+
+</script>
+
