--- a/iframe.html
+++ b/iframe.html
@@ -4,7 +4,7 @@
 	var iframe = document.getElementById("ifr");
 	
 
-	iframe.contentWindow.document.getElementById("ifr").style.color = "blue";
+	iframe.contentWindow.document.getElementById("in_ifr").style.color = "blue";
 
 
 </script>
