--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<p contenteditable="true" style="background-color:gray;">
+<p contenteditable="true" style="background-color:gray;height:200px">
 
 </p>
