--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<span contenteditable="true" style="background-color:gray;height:200px;width:200px">
+<span contenteditable="true" style="display:block;background-color:gray;height:200px;width:200px">
 
 </span>
