--- a/iframe.html
+++ b/iframe.html
@@ -1,4 +1,4 @@
-<iframe id="ifr" src="https://vit1546.github.io/test.html" style="width:600px;height:200px;"></iframe>
+<iframe id="ifr" src="http://vit1546.github.io/test.html" style="width:600px;height:200px;"></iframe>
 <p id="p_el"></p>
 <script type="text/javascript">
 window.onload = function(){
