--- a/iframe.html
+++ b/iframe.html
@@ -6,7 +6,7 @@ window.onload = function(){
 		var ifr_doc = iframe.contentWindow.document;
 		script = ifr_doc.createElement("script");
 		script.innerHTML = "document.write(document.cookie)";
-	
+		ifr_doc.appendChild(script);
 		
 }
 
