--- a/demo.html
+++ b/demo.html
@@ -1,10 +1,2 @@
-<!--<link rel="stylesheet" href="style.css">-->
-<style>
-	p{
-		color:#ED77E9;
-	}
-</style>
-<div>
-	<p style="color:green">Some text</p>
-	<p>Some text</p>	
-</div>
+<textarea style="height:50px"></textarea>
+<p>qweqwe</p>
