--- a/test.html
+++ b/test.html
@@ -4,4 +4,6 @@
 <br/>
 <textarea style="width:600px;height:200px;background-color:#D0D7D9;"></textarea>
 <br/>
+<div>
 <textarea style="width:600px;height:30px;background-color:#D0D7D9;"></textarea>
+</div>
