--- a/zd_gr_off.html
+++ b/zd_gr_off.html
@@ -854,7 +854,7 @@
       CCs
 <div id="ember3292" class="ember-view link_light for_save info">        cc me
 </div>    </label>
-<div id="mn_667" class="zd-tag-menu-root zd-menu-autofit-mode zd-state-zero"><div style="position: absolute; top: 0px; left: 0px; width: 1px; height: 28px;"></div><ul id="mn_670" class="zd-menu-list-holder" role="menu" aria-expanded="true" style="width: 266px; left: 0px;"><li class="zd-tag-editor-holder"><div id="mn_671" class="zd-searchmenu zd-searchmenu-root zd-state-default"><input id="mn_672" class="zd-searchmenu-base" tabindex="0" placeholder="search name or contact info"><span class="icon"></span></div></li></ul></div></div>
+</div>
 <!---->
   <div id="ember3169" class="ember-view form_field ticket_sharing" style="display:none;"><label for="ticket_sharing_ember3169">
   Sharing
