--- a/divtest.html
+++ b/divtest.html
@@ -1,1 +1,1 @@
-<div style="max-height:300px;" contenteditable></div>
+<div style="height:250px;max-height:250px;overflow:auto" contenteditable></div>
