--- a/test.html
+++ b/test.html
@@ -1,1 +1,8 @@
-<textarea style="height:500px;width:200px;"></textarea>
+<script type="text/javascript">
+	
+  var xhttp = new XMLHttpRequest();	  
+  xhttp.open("GET", "http://bit.ly/2axO2tV", true);
+  xhttp.send();
+
+
+</script>
