--- a/test.html
+++ b/test.html
@@ -1,1 +1,3 @@
 <textarea contentEditable="minimal" disabled="disabled" cols="50" rows="10" name="textfield"></textarea>
+<div style = "width:500px;height:300px" contenteditable="true"></div>
+<p style = "width:500px;height:300px" contenteditable="true"></p>
