--- a/h.html
+++ b/h.html
@@ -2,10 +2,10 @@
 
 <p>26.09.2016, Пн </p>
 <p>05:45, 18:00	KIEV ANTALYA	7	 XANTE RESORT&SPA HOTEL 5 ***** (Kumkoy)		AI	STANDARD ROOM       900 долл </p>
-<p><a href="http://www.anextour.com/hotel-detail-samo.aspx?hotelcode=9014">ссылка на отель</a></p>
+<p><a target="_blank" href="http://www.anextour.com/hotel-detail-samo.aspx?hotelcode=9014">ссылка на отель</a></p>
 
 <p>Тоже 
 
 <p>26.09.2016, Пн </p>
 <p>05:45, 18:00	KIEV ANTALYA	7	 KILIKYA RESORT CAMYUVA ( ex ELIZE RESORT) 5 *****(Camyuva)		UAI	STD RUN OF THE HOUSE / DBL </p>           900 долл
-<p><a href="http://www.anextour.com/hotel-detail-samo.aspx?hotelcode=8671">ссылка на отель</a></p>
+<p><a target="_blank" href="http://www.anextour.com/hotel-detail-samo.aspx?hotelcode=8671">ссылка на отель</a></p>
