--- a/h.html
+++ b/h.html
@@ -1,7 +1,8 @@
 <p>Отель на первой линии, пляж песчаный </p>
 
 <p>26.09.2016, Пн </p>
-<p>05:45, 18:00	KIEV ANTALYA	7	 XANTE RESORT&SPA HOTEL 5 ***** (Kumkoy)		AI	STANDARD ROOM       900 долл </p>
+<p>05:45, 18:00	KIEV ANTALYA	7	 XANTE RESORT&SPA HOTEL 5 ***** (Kumkoy)		AI	STANDARD ROOM       </p>
+900 долл 
 <p><a target="_blank" href="http://www.anextour.com/hotel-detail-samo.aspx?hotelcode=9014">ссылка на отель</a></p>
 
 <p>Тоже 
