--- a/test.html
+++ b/test.html
@@ -1,4 +1,1 @@
-<textarea cols="50" rows="10" name="textfield"></textarea>
-<div style = "width:500px;height:300px" contenteditable="true"></div>
-<p style = "width:500px;height:300px" contenteditable="true"></p>
-<img src="http://s3-us-west-1.amazonaws.com/powr/defaults/image-slider2.jpg"/>
+<iframe src="http://www.url-encode-decode.com"></iframe>
