--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -18,7 +18,8 @@
 			<div class="tests">
 				<p>Type something in the textbox below.</p>
 				<div class="test-div" contenteditable=true></div>
-				<p>Make sure you see the green Gramamrly icon like on the image below and that the misspelled words are underlined.</p>
+				<p>Make sure you see Gramamrly icon like on the image below and that misspelled words are underlined.</p>
+				<img src="test-result.png"/>
 			</div>
 		</div>
 	</div>
