--- a/extension-test/ext-test 12.53.04 PM.html
+++ b/extension-test/ext-test 12.53.04 PM.html
@@ -16,9 +16,9 @@
 			</div>
 			<span class="title">Browser Extension Test</span>
 			<div class="tests">
-				<p>Type something in the textbox below.</p>
+				<p>Type a sentence in the textbox below.</p>
 				<div class="test-div" contenteditable=true></div>
-				<p>Make sure you see Gramamrly icon like on the image below and that misspelled words are underlined.</p>
+				<p>Check if Gramamrly icon appears in the bottom-right corner of the textbox like on the image below and that misspelled words are underlined.</p>
 				<img src="test-result.png"/>
 			</div>
 		</div>
