--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -18,7 +18,7 @@
 			<div class="tests">
 				<p>Type a senetence in the text box below.</p>
 				<div class="test-div" contenteditable=true></div>
-				<p>Check if there is a Grammarly icon in the bottom-right corner like on the image below and that misspelled words are underlined.</p>
+				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
 				<img src="test-result.png"/>
 			</div>
 		</div>
