--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -17,7 +17,9 @@
 			<span class="title">Browser Extension Test</span>
 			<div class="tests">
 				<p>Type a senetence in the text box below.</p>
-				<div class="test-div" contenteditable=true></div>
+				<div class="test-div-wrapper">
+					<div class="test-div" contenteditable=true></div>
+				</div>
 				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
 				<img src="test-result.png"/>
 			</div>
