--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -18,7 +18,7 @@
 			<div class="tests">
 				<p>Type a senetence in the text box below.</p>
 				<div class="test-div-wrapper">
-					<div class="test-div" contenteditable=true>A sentense with some words mispelled.</div>
+					<div class="test-div" tabindex="1" contenteditable=true>A sentense with some words mispelled.</div>
 				</div>
 				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
 				<img src="test-result.png"/>
