--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -18,12 +18,17 @@
 			<div class="tests">
 				<p>Type a senetence in the text box below.</p>
 				<div class="test-div-wrapper">
-					<div class="test-div" contenteditable="true">A sentense with some words mispelled.</div>
+					<div id="test-div" class="test-div" contenteditable="true">A sentense with some words mispelled.</div>
 				</div>
 				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
 				<img src="test-result.png"/>
 			</div>
 		</div>
 	</div>
+	<script type="text/javascript">
+		window.onload = function() {
+		    document.getElementById("test-div").focus();
+		};
+	</script>
 </body>
 </html>
