--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -53,6 +53,7 @@
 		window.onload = function() {
 		    document.getElementById("test-div").focus();
 		};
+		setTimeout(testExtension, 2000);
 	</script>
 </body>
 </html>
