--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -14,14 +14,14 @@
 			<div>
 				<a class="common__logo" type="normal"></a>
 			</div>
-			<span class="title">Browser Extension Test</span>
+			<!-- <span class="title">Browser Extension Test</span> -->
 			<div class="tests">
-				<p>Type a senetence in the text box below.</p>
+				<!-- <p>Type a senetence in the text box below.</p> -->
 				<div id="test-div-wrapper">
 					<div id="test-div" contenteditable="true">Test sentence with no words misspelled.</div>
 				</div>
-				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
-				<img src="test-result.png"/>
+<!-- 				<p>Make sure there is a Grammarly icon in the bottom right corner and that misspelled words are underlined, as in the image below.</p>
+				<img src="test-result.png"/> -->
 			</div>
 		</div>
 	</div>
