--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -26,7 +26,7 @@
 		<div class="tests">
 			<div id="progressbar"></div>			
 			<div id="test-div-wrapper">
-				<div id="test-div" contenteditable="true">Test sentence with no words misspelled.</div>
+				<div id="test-div" contenteditable="true">Test sentence with a word misspeled.</div>
 			</div>
 
 		</div>
