--- a/extension-test/ext-test.html
+++ b/extension-test/ext-test.html
@@ -21,7 +21,7 @@
 			<a class="common__logo" type="normal"></a>
 		</div>
 		<span class="title">Browser Extension Test</span>
-
+		<p>You will be automatically redirected to a help page when the test finishes.</p>
 		
 		<div class="tests">
 			<div id="progressbar"></div>			
