--- a/test.html
+++ b/test.html
@@ -1,16 +1,1 @@
-<div id="11"></div>
-<script>
-
-window.onload = function(){
-	setTimeout(function(){ 
-		var par = document.getElementById("11");
-		var ta = document.createElement("textarea");
-		ta.setAttribute("style","height:400px;width:500px");
-		par.appendChild(ta);
-
-	}, 3000);
-
-	
-}
-
-</script>
+<p>A&nbsp;sentense&nbsp;with&nbsp;spaces.</p>
