--- a/divtest.html
+++ b/divtest.html
@@ -1,1 +1,2 @@
+<link rel="icon" type="image/x-icon" href="https://assets-cdn.github.com/favicon.ico">
 <div style="height:250px;max-height:250px;overflow:auto" contenteditable></div>
