--- a/log-parser/test.html
+++ b/log-parser/test.html
@@ -160,7 +160,11 @@
 
     if(logTypePattern.test(log)){
       //installer log
-      var productCodeInstaller = productCodeInstallerPattern.exec(log)[1].toLowerCase();
+      try{
+        var productCodeInstaller = productCodeInstallerPattern.exec(log)[1].toLowerCase();    
+      }catch(e){
+        return;
+      }
       installerLogs.push(
         new InstallerLog(productCodeInstaller,log));
 
