--- a/retrieving-tool/index.html
+++ b/retrieving-tool/index.html
@@ -2,6 +2,7 @@
 <head>
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <script>if(location.protocol != "https:") location.href = "https://vit1546.github.io/retrieving-tool/index.html"</script>
 </head>
 <body>
     <div id="main-wrap" class="main-wrap">
