--- a/test.html
+++ b/test.html
@@ -1,2 +1,2 @@
-<textarea></textarea>
+<textarea style="width: 500px; height: 500px"></textarea>
 <div contenteditable=true style="width: 500px; height: 500px"></div>
