--- a/log-parser/test.html
+++ b/log-parser/test.html
@@ -17,8 +17,7 @@
     </div>
     <script type="text/javascript">
 
-    	var oldVersion = "";
-    	document.getElementById("result").innerText = "";
+    	var oldVersion;    	
     	var oldVersionPattern = /SOURCEMGMT: Trying source [^}]+}([^\\]+)/i;
 
         function loadFileAsText(files) {
